--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  animations: ^2.0.3
   bootstrap_icons: ^1.8.1
   cupertino_icons: ^1.0.2
   equatable: ^2.0.3
