--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_core: ^1.20.0
   flutter:
     sdk: flutter
+  flutter_svg: ^1.1.1+1
   font_awesome_flutter: ^10.1.0
   google_fonts: ^3.0.1
   http: ^0.13.4
@@ -53,6 +54,13 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/nike_logo.svg
+    - assets/nike_lab_logo.jpg
+    - assets/air_jordan_logo.svg
+    - assets/nike_sb_logo.png
+    - assets/nike_acg_logo.svg
+    - assets/nike_by_you_logo.svg
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
