--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_core: ^1.20.0
   flutter:
     sdk: flutter
+  flutter_hooks: ^0.18.5+1
   flutter_svg: ^1.1.1+1
   font_awesome_flutter: ^10.1.0
   google_fonts: ^3.0.1
