--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   http: ^0.13.4
   intl: ^0.17.0
   provider: ^6.0.3
+  transparent_image: ^2.0.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -59,6 +60,7 @@ flutter:
     - assets/brands/
     - assets/categories/
     - assets/my_interests/
+    - assets/data/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
